# goose-rust-port

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: config.rs  session.rs
src/exchange/: message.rs  mod.rs  openai.rs
src/input/: mod.rs  prompt.rs
src/models/: message.rs  mod.rs  profile.rs
src/session/: mod.rs
src/stats/: mod.rs
src/toolkit/: base.rs  default.rs  mod.rs  tools.rs
src/utils/: file_utils.rs  mod.rs  name_generator.rs  session_file.rs
tests/: manual_test.md  openai_integration.rs  openai_toolkit_integration.rs  session_integration.rs  stats_integration.rs  toolkit_integration.rs
