[package]
name = "rust-goose"
version = "0.1.0"
edition = "2021"
description = "AI-powered tool to assist in solving programming and operational tasks (Rust port)"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
shellexpand = "3.1"
dirs = "5.0"
colored = "2.0"