[package]
name = "rust-goose"
version = "0.1.0"
edition = "2021"
description = "AI-powered tool to assist in solving programming and operational tasks (Rust port)"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
shellexpand = "3.1"
dirs = "5.0"
colored = "2.0"
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"
regex = "1.10"
ctrlc = "3.4"
log = "0.4"
env_logger = "0.10"
rustyline = "12.0"
atty = "0.2"
tokio = { version = "1.34", features = ["full"] }
async-trait = "0.1"
async-openai = "0.17"
dotenv = "0.15"